--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,8 @@
 
     --settings-toggle-false: #555;
     --settings-toggle-true: #E6E6E6;
+
+    --toolbar-border: none;
 }
 
 *{
